<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Local Testing-->
        <scene sceneID="gRB-L2-guj">
            <objects>
                <viewController title="Local Testing" id="CJB-Uu-znj" customClass="NavLocalTesting" customModule="Sample_iOS" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="1mt-hQ-QzU">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="4NH-hK-1jL"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Local Testing" image="nav_local_testing" id="wAx-Jl-gAz"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lDh-tw-GGL" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="749.60000000000002" y="411.544227886057"/>
        </scene>
        <!--UI Elements-->
        <scene sceneID="hNz-n2-bh7">
            <objects>
                <viewController title="UI Elements" id="9pv-A4-QxB" customClass="FirstViewController" customModule="Sample_iOS" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleAspectFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="x29-8T-pSU">
                                <rect key="frame" x="0.0" y="73" width="375" height="60"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Text2"/>
                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Text">
                                    <color key="titleColor" systemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <segue destination="8xH-wG-kzn" kind="show" id="b6i-zN-6B0"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="XYK-BL-QoO">
                                <rect key="frame" x="0.0" y="141" width="375" height="60"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Alert1"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Alert">
                                    <color key="titleColor" systemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="showAlert:" destination="9pv-A4-QxB" eventType="touchUpInside" id="mgP-kx-RmE"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <navigationItem key="navigationItem" title="UI Elements" id="BnI-kv-b5C"/>
                    <connections>
                        <outlet property="ButtonNativeAlert" destination="XYK-BL-QoO" id="IfU-Et-u29"/>
                        <outlet property="ButtonTextInput" destination="x29-8T-pSU" id="CWj-PA-cIq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1685.5999999999999" y="-1024.1379310344828"/>
        </scene>
        <!--Text Editor-->
        <scene sceneID="5eD-Nq-bXN">
            <objects>
                <viewController id="8xH-wG-kzn" customClass="TextEditor" customModule="Sample_iOS" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="M6I-Pm-fGB">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Waiting for text input." lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UpD-RG-SEo">
                                <rect key="frame" x="0.0" y="64" width="375" height="200"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" white="0.94664736304964336" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ha1-b8-aSl">
                                <rect key="frame" x="0.0" y="264" width="375" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" white="0.8866443452380951" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="qco-ya-1yE"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                    <connections>
                        <outlet property="DisplayText" destination="UpD-RG-SEo" id="Fsk-j4-dZa"/>
                        <outlet property="nameTextField" destination="Ha1-b8-aSl" id="ziq-yL-5lz"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9x3-Df-5BP" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2640.8000000000002" y="-1023.2383808095952"/>
        </scene>
        <!--Web View-->
        <scene sceneID="wg7-f3-ORb">
            <objects>
                <viewController storyboardIdentifier="NavWebView" title="Web View" id="8rJ-Kc-sve" customClass="NavWebView" customModule="Sample_iOS" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Web View" image="nav_webview" id="cPa-gy-q4n"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="749.5" y="-322.5"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="yl2-sM-qoP">
            <objects>
                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                        <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBar>
                    <connections>
                        <segue destination="pZM-gE-qr8" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                        <segue destination="CJB-Uu-znj" kind="relationship" relationship="viewControllers" id="e0J-Sq-hwg"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-172" y="-321"/>
        </scene>
        <!--UI Elements-->
        <scene sceneID="8Oa-sC-CIV">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pZM-gE-qr8" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="UI Elements" image="nav_ui" selectedImage=" " id="acW-dT-cKf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JnK-0d-uYq">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="owt-m8-yJI"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="GQo-le-1A1" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="748.79999999999995" y="-1021.889055472264"/>
        </scene>
    </scenes>
    <resources>
        <image name=" " width="16" height="16"/>
        <image name="nav_local_testing" width="54" height="50"/>
        <image name="nav_ui" width="48" height="48"/>
        <image name="nav_webview" width="57" height="46"/>
        <systemColor name="darkTextColor">
            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
